@@ -1,5 +1,8 @@
 2008-03-22  Brian Warner  <warner@lothar.com>
 
+	* buildbot/status/client.py: hush pyflakes, log.msg vs log
+	* buildbot/status/mail.py: same
+
 	* buildbot/locks.py (debuglog): hush pyflakes
 
 	* buildbot/steps/source.py (SVN.__init__): fix pyflakes: it
